add more series to DB